# Capstone-Zigbee

./: .gitmodules  README.md
app/: 화면설계서.key
assets/: coffee.json
core/: __main__.py  core.py  requirements.txt  setup.cfg
core/Flow.mindnode/: contents.xml  viewState.plist
core/bitchoom/: __main__.py  boot.py  const.py  core.py
core/config/: automations.json  configuration.json  moments.json
core/core_structure.mindnode/: contents.xml  viewState.plist
core/lightme/: __init__.py  __main__.py  boot.py  config.py  config_flow.py  const.py  const_api.py  core.py  exceptions.py  lightme_device.py  loader.py  manifest.json  medium.py  network.py  runner.py  sensor.py  setup.py  strings.json  typing.py  user_defaults.py
core/lightme/components/: __init__.py
core/lightme/components/api/: __init__.py  manifest.json
core/lightme/components/automation/: __init__.py
core/lightme/components/default_config/: __init__.py  manifest.json
core/lightme/components/http/: __init__.py  const.py  manifest.json  web_runner.py
core/lightme/components/light/: manifest.json
core/lightme/components/lightme/: __init__.py  manifest.json
core/lightme/components/network/: manifest.json
core/lightme/helpers/: behavior.py  config_validation.py  typing.py
core/lightme/util/: __init__.py  async_.py  dt.py  json.py  temperature.py  unit_system.py
core/test/test.xcodeproj/: project.pbxproj
core/test/test.xcodeproj/project.xcworkspace/xcuserdata/stansign.xcuserdatad/: UserInterfaceState.xcuserstate
network/: fastapi_test.py
vision/: FINAL.py  pose.py  pose_5.py  (+7 more)
(+33 files in other folders)
