[metadata]
name         = bitchoom
version      = beta-1
author       = StanSign
author_email = crystalashe@naver.com
license      = Apache-2.0
description  = 2022 캡스턴 디자인 허브
keywords     = home, automation
project_urls =
    Source Code = https://github.com/StanSign/core
    Bug Reports = https://github.com/StanSign/core/issues
classifier =
    Programming Language :: Python :: 3.9
    Topic :: Home Automation

[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.9.0
install_requires =


[options.packages.find]
include =
    bitchoom*

[options.entry_points]
console_scripts =
    hass = bitchoom.__main__:main